Make section width and padding uniform. Add empty sections three and four. Section-two images uniform height, fixed proportions, and gap between.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ body {
 .section-two,
 .section-three,
 .section-four {
-    max-width: 660px;
+    width: 660px;
+    border: 2px solid #3882F6;
+    padding-inline: 128px;
+    padding-bottom: 80px;
 }
 
 .section-one {
@@ -19,8 +22,6 @@ body {
     flex-direction: column;
     background: #1F2937;
     color: white;
-    padding-inline: 128px;
-    padding-bottom: 96px;
     gap: 40px;
 }
 
@@ -81,10 +82,20 @@ button {
 .section-two {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: white;
 }
 
+.content-two {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    /* align-items: center; */
+}
+
 .section-two img {
-    height: 40px;
-    width: auto;
+    border-radius: 9px;
+    border: 2px solid #3882F6;
+    width: 100%;
+    max-height: 120px;
 }
